--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     },
     "dependencies": {
         "body-parser": "^1.18.3",
-        "express": "^4.16.4"
+        "express": "^4.18.2",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
-        "concurrently": "^4.0.1",
+        "concurrently": "^4.1.2",
         "nodemon": "^2.0.20"
     }
 }
