--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
     },
     "dependencies": {
+        "@material-ui/icons": "^4.11.3",
         "body-parser": "^1.18.3",
         "express": "^4.18.2",
         "multer": "^1.4.5-lts.1",
